# control_ablations_oc_paper

./: .gitignore  README.md  pyproject.toml  requirements.txt
control_ablations/: config.py
control_ablations/ablation_infra/: __init__.py  ablation_analyser.py  analysis_io.py  analysis_spec.py  base_io.py  run_settings.py  runner.py  study.py  study_with_analysis.py  target.py  trial_settings.py
control_ablations/generic_targets/: __init__.py  fixed_control_target.py  integrators.py  oc_io.py  optimal_control.py  optimal_control_target.py
tests/: test_oc_collocation.py
